force-app/main/default/objects/Zco_Feature_Flag__mdt/Zco_Feature_Flag__mdt.object-meta.xml
<CustomObject>
    <description>Feature flags for workbook-driven integration and workflow controls.</description>
    <label>Zco Feature Flag</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Zco Feature Flag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zco Feature Flags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>