force-app/main/default/objects/Zco_Feature_Flag__mdt/fields/Feature__c.field-meta.xml
<CustomField>
    <fullName>Feature__c</fullName>
    <label>Feature</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>