force-app/main/default/objects/Zco_Feature_Flag__mdt/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <label>Key</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>